argocd/objects/cilium/l2.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: l2-gateway-class
spec:
  controllerName: io.cilium/gateway-controller
  description: Non default gateway class for l2 announced services
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: l2-gateway-config
    namespace: default
