argocd/objects/cilium/nodeipamlb.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nodeipamlb-gateway-class
spec:
  controllerName: io.cilium/gateway-controller
  description: Non default gateway class for node ipam lb services
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: nodeipamlb-gateway-config
    namespace: default
