argocd/objects/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-cluster-issuer
spec:
  gatewayClassName: nodeipamlb-gateway-class
  listeners:
    - protocol: HTTPS
      name: test-host-listener
      hostname: host.k8s.notsodefault.ca
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: host-listener-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: l2-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-cluster-issuer
spec:
  gatewayClassName: l2-gateway-class
  infrastructure:
    labels:
      ipam: homelab-l2
  listeners:
    - protocol: HTTPS
      name: test-listener
      hostname: test.k8s.notsodefault.ca
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: test-listener-cert

    - protocol: HTTPS
      port: 443
      name: argocd-listener
      hostname: argo.k8s.notsodefault.ca
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: argo-listener-cert

    - protocol: HTTPS
      port: 443
      name: auth-listener
      hostname: auth.k8s.notsodefault.ca
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: auth-listener-cert

    - protocol: HTTPS
      port: 443
      name: grafana-listener
      hostname: grafana.k8s.notsodefault.ca
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-listener-cert

    # Disable until we get some auth in front of it
    #    - protocol: HTTPS
    #      port: 443
    #      name: prometheus-listener
    #      hostname: prometheus.k8s.notsodefault.ca
    #      allowedRoutes:
    #        namespaces:
    #          from: Selector
    #          selector:
    #            matchLabels:
    #              shared-gateway-access: "true"
    #      tls:
    #        mode: Terminate
    #       certificateRefs:
    #          - name: prometheus-listener-cert

    - protocol: HTTPS
      port: 443
      name: readeck-listener
      hostname: readeck.k8s.notsodefault.ca
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: readeck-listener-cert

    - protocol: HTTPS
      port: 443
      name: headlamp-listener
      hostname: headlamp.k8s.notsodefault.ca
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: headlamp-listener-cert

    - protocol: HTTPS
      port: 443
      name: searxng-listener
      hostname: searxng.k8s.notsodefault.ca
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: searxng-listener-cert

    - protocol: HTTPS
      port: 443
      name: clickstack-listener
      hostname: clickstack.k8s.notsodefault.ca
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: clickstack-listener-cert

    - protocol: HTTPS
      port: 443
      name: homeassistant-listener
      hostname: homeassistant.k8s.notsodefault.ca
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: homeassistant-listener-cert
